[tool.poetry]
name = "neo4j-demo"
version = "0.1.0"
description = "neo4j-demo"
authors = ["mgjo5899 <mgjo5899@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
neomodel = "^4.0.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
